# LiliumDB

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
notes/: TODO.txt  lilium_db_notes.txt
src/: CMakeLists.txt
src/access/: rid.h
src/btree/: CMakeLists.txt  btree.cpp  btree.h  btree_page.cpp  btree_page.h  btree_types.h  cursor.cpp  cursor.h
src/common/: byte_span.h  common.h  core.h  db_result.h  file_format.h  flags.h  macros.h  result.h  status.h  types.h
src/file/: file_manager.h
src/pager/: CMakeLists.txt  lru_pager.cpp  lru_pager.h  page_guard.cpp  page_guard.h  pager.h  pin_manager.h
src/storage/: CMakeLists.txt  page_io.h  std_page_io.cpp  std_page_io.h
src/utils/: CMakeLists.txt  byte_span.h  byte_span_macros.h  flags.h  hexdump.cpp  hexdump.h  result.h  result_macros.h
tests/: CMakeLists.txt  btree_test.cpp  byte_span_test.cpp  db_result_test.cpp  flags_test.cpp  lru_pager_test.cpp  result_test.cpp  status_test.cpp  std_page_io_test.cpp  test_helpers.h
